# ABC_HW2

ABC/: CMakeLists.txt  Пояснительная записка.docx
ABC/headers/: Animal.h  Beast.h  Bird.h  Container.h  Fish.h
ABC/sources/: Animal.cpp  Beast.cpp  Bird.cpp  Container.cpp  Fish.cpp  main.cpp
